--- a/index.ipynb
+++ b/index.ipynb
@@ -45,13 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "import sqlite3\n"
    ]
   },
   {
