Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "c.execute(\"\"\"\"\"\")"
    ]
   },
   {
