--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "c.execute(\"\"\"selct)"
+    "c.execute(\"\"\"select name, color from planets)"
    ]
   },
   {
