Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "c.execute(\"\"\"select name, color from planets)"
+    "c.execute(\"\"\"select name, color from planets;\"\"\"\")"
    ]
   },
   {
