--- a/index.ipynb
+++ b/index.ipynb
@@ -96,13 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fdfe3b8a5e0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "c.execute(\"\"\"select name, color from planets;\"\"\"\")"
+    "c.execute(\"\"\"select name, color from planets;\"\"\")\n"
    ]
   },
   {
