--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,8 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "c.execute(\"\"\"select name, color from planets;\"\"\")\n"
+    "c.execute(\"\"\"select name, color from planets;\"\"\")\n",
+    "df =pd.DataFrame"
    ]
   },
   {
