Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
     "#Your code here\n",
     "import pandas as pd\n",
     "c.execute(\"\"\"select name, color from planets;\"\"\")\n",
-    "df =pd.DataFrame"
+    "df =pd.DataFrame(c.fetchall())"
    ]
   },
   {
