--- a/index.ipynb
+++ b/index.ipynb
@@ -96,25 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7fdfe3b8a5e0>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
     "c.execute(\"\"\"select name, color from planets;\"\"\")\n",
-    "df =pd.DataFrame(c.fetchall())"
+    "df =pd.DataFrame(c.fetchall())\n",
+    "df.columns = "
    ]
   },
   {
