Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,7 @@
     "import pandas as pd\n",
     "c.execute(\"\"\"select name, color from planets;\"\"\")\n",
     "df =pd.DataFrame(c.fetchall())\n",
-    "df.columns = "
+    "df.columns = [x[0] for x in c.descriptio]"
    ]
   },
   {
