--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select * from planet)"
+    "c.execute(\"\"\"select * from planets where mass > 1;\"\"\"\"\"\")"
    ]
   },
   {
