Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,21 +204,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-7-2e1d5c7208a8>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-2e1d5c7208a8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    c.execute(\"\"\"select * from planets where mass > 1;\"\"\"\"\"\")\u001b[0m\n\u001b[0m                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fdfe3b8a5e0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select * from planets where mass > 1;\"\"\"\"\"\")"
+    "c.execute(\"\"\"select * from planets where mass > 1;\"\"\")\n"
    ]
   },
   {
