--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select * from planets where mass > 1;\"\"\")\n"
+    "c.execute(\"\"\"select * from planets where mass > 1;\"\"\")\n",
+    "df.pd.DataFrame()"
    ]
   },
   {
