--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select * from planets where mass > 1;\"\"\")\n",
-    "df.pd.DataFrame()"
+    "df.pd.DataFrame(c.fetchall())\n",
+    "df.colum"
    ]
   },
   {
