--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
     "#Your code here\n",
     "c.execute(\"\"\"select * from planets where mass > 1;\"\"\")\n",
     "df.pd.DataFrame(c.fetchall())\n",
-    "df.colum"
+    "df.columns = [x[0] for x]"
    ]
   },
   {
