--- a/index.ipynb
+++ b/index.ipynb
@@ -375,7 +375,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select)"
+    "c.execute(\"\"\"select name )"
    ]
   },
   {
