Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,7 +375,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name )"
+    "c.execute(\"\"\"select name and mass where mass )"
    ]
   },
   {
