Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name, mass where mass <= 1.00)"
+    "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\"\")"
    ]
   },
   {
