--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -307,21 +307,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-14-136341f95f4b>, line 2)",
+     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-13-6ea6674fe3b4>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-136341f95f4b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\"\")\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-6ea6674fe3b4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    c.execute(\"\"\"select name, mass where mass <= 1.00)\u001b[0m\n\u001b[0m                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
      ]
     }
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name, mass where mass <= 1.00\"\")"
+    "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\"\")"
    ]
   },
   {
