--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\")"
+    "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\")\n",
+    "df"
    ]
   },
   {
