--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\")\n",
-    "df"
+    "df = pd.DataFrame(c.f)"
    ]
   },
   {
