Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,8 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\")\n",
-    "df = pd.DataFrame(c.f)"
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.colum"
    ]
   },
   {
