Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,7 @@
     "#Your code here\n",
     "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\")\n",
     "df = pd.DataFrame(c.fetchall())\n",
-    "df.colum"
+    "df.columns = [x[0] ]"
    ]
   },
   {
