--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -326,7 +326,7 @@
     "#Your code here\n",
     "c.execute(\"\"\"select name, mass where mass <= 1.00\"\"\")\n",
     "df = pd.DataFrame(c.fetchall())\n",
-    "df.columns = [x[0] for x in c.description]\n",
+    "df.column = [x[0] for x in c.description]\n",
     "df"
    ]
   },
