Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -457,8 +457,7 @@
     }
    ],
    "source": [
-    "#Your code here\n",
-    "c.execute(\"\"\"select name,color )"
+    "#Your code here"
    ]
   },
   {
