--- a/index.ipynb
+++ b/index.ipynb
@@ -458,7 +458,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name,color )"
+    "c.execute(\"\"\"select name,color from planets where num_of_moons > 10)"
    ]
   },
   {
