--- a/index.ipynb
+++ b/index.ipynb
@@ -458,7 +458,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name,color from planets where num_of_moons > 10)"
+    "c.execute(\"\"\"select name,color from planets where num_of_moons > 10;\"\"\")\n",
+    "df = pddataframe"
    ]
   },
   {
