Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,8 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select name,color from planets where num_of_moons > 10;\"\"\")\n",
-    "df = pddataframe"
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = x"
    ]
   },
   {
