--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,7 @@
     "#Your code here\n",
     "c.execute(\"\"\"select name,color from planets where num_of_moons > 10;\"\"\")\n",
     "df = pd.DataFrame(c.fetchall())\n",
-    "df.columns = x"
+    "df.columns = [x[0] for x in c.description]\n"
    ]
   },
   {
