Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "3  Neptune   dark blue"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,8 @@
     "#Your code here\n",
     "c.execute(\"\"\"select name,color from planets where num_of_moons > 10;\"\"\")\n",
     "df = pd.DataFrame(c.fetchall())\n",
-    "df.columns = [x[0] for x in c.description]\n"
+    "df.columns = [x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
