--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('\"\"')"
+    "c.execute(\"\"\"select name, color from pla,\"\"\")"
    ]
   },
   {
