--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name, color from pla,\"\"\")"
+    "c.execute(\"\"\"select name, color from planets where color = blue, light blue\"\"\")"
    ]
   },
   {
