Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name, color from planets where color = blue, light blue\"\"\")"
+    "c.execute(\"\"\"select name, color from planets where color = blue, light blue, dark blue\"\"\"\n",
+    ")"
    ]
   },
   {
