--- a/index.ipynb
+++ b/index.ipynb
@@ -540,7 +540,8 @@
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"seclect \"\"\")"
    ]
   },
   {
