Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -541,7 +541,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"seclect name from planets whe\"\"\")"
+    "c.execute(\"\"\"seclect name from planets where num_of_moons \"\"\")"
    ]
   },
   {
