--- a/index.ipynb
+++ b/index.ipynb
@@ -489,7 +489,8 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name from planets where num_of_moons >=1 and mass <1\"\"\")"
+    "c.execute(\"\"\"select name from planets where num_of_moons >=1 and mass <1\"\"\")\n",
+    "df = pd.DataFrame"
    ]
   },
   {
