--- a/index.ipynb
+++ b/index.ipynb
@@ -490,7 +490,8 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select name from planets where num_of_moons >=1 and mass <1\"\"\")\n",
-    "df = pd.DataFrame"
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.colum"
    ]
   },
   {
