--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name from planets where num_of_moons >=1 and mass <1\"\"\")\n",
+    "c.execute(\"\"\"select na from planets where num_of_moons >=1 and mass <1\"\"\")\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df"
