--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -497,31 +497,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>num_of_moons</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>rings</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>4</td>\n",
        "      <td>Mars</td>\n",
+       "      <td>red</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   name\n",
-       "0  Mars"
+       "   id  name color  num_of_moons  mass  rings\n",
+       "0   4  Mars   red             2  0.11      0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select na from planets where num_of_moons >=1 and mass <1\"\"\")\n",
+    "c.execute(\"\"\"select * from planets where num_of_moons >=1 and mass <1;\"\"\")\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df"
