--- a/index.ipynb
+++ b/index.ipynb
@@ -563,7 +563,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute(\"\"\"select name, color from planets where color = blue, light blue, dark blue\"\"\")\n"
+    "c.execute(\"\"\"select name, color from planets where color == blue or colight blue, dark blue\"\"\")\n"
    ]
   },
   {
