--- a/index.ipynb
+++ b/index.ipynb
@@ -563,7 +563,8 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\"select name, color from planets where color == 'blue' or color == 'light blue' or color == 'dark blue';\"\"\")\n",
-    "df= pd.DataFrame "
+    "df= pd.DataFrame (c.fetchall())\n",
+    "df.columns = [x[0] for xi]"
    ]
   },
   {
